fit_predictor/mkp_aco/evaluates/run14/2025-01-27_08-27-23/evaluations/problem_eval-8633815372751665160_stdout.txt
Traceback (most recent call last):
  File "E:\Projects\CO\reevo-main/problems/mkp_aco/eval.py", line 8, in <module>
    import gpt
  File "E:\Projects\CO\reevo-main\problems\mkp_aco\gpt.py", line 5
    n, m = prize.shape[0], weight.shape[1]
       ^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?
